@@ -1,6 +1,7 @@
 User johns
 Date:
 
+    Fix compile with newer libav.
     Fix OSD bugs.
     Add some VA-API VPP info outputs.
     Remove build files for old unstable VDR.
